--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	implementation("com.squareup.okhttp3:okhttp:4.1.0")
 	//Logging Interceptor
 	implementation("com.squareup.okhttp3:logging-interceptor:4.1.0")
+
+	//Picasso
+	implementation 'com.squareup.picasso:picasso:2.71828'
 	//Glide
 	implementation 'com.github.bumptech.glide:glide:4.9.0'
 	annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
